Fix displaying posts with attachments on small mobile devices

--- a/posts/static/style.css
+++ b/posts/static/style.css
@@ -204,6 +204,7 @@ div.post.reply div.body {
 	margin-top:0.8em;
 	padding-right:3em;
 	padding-bottom:0.3em;
+	min-width:80px;
 }
 div.post.reply.highlighted {
 	background:#FFF;
